--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,16 +26,4 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 0.75rem;
   }
-
-  // 5. Fix "View all clients" link positioning
-  .recent-clients__header {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 0.5rem;
-  }
-
-  .view-all-link {
-    margin-top: 0;
-    margin-bottom: 1rem;
-  }
 }
